--- a/Restaurant-POS-system/Restaurant-POS-system.vbproj
+++ b/Restaurant-POS-system/Restaurant-POS-system.vbproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="HIC.System.Windows.Forms.DataVisualization" Version="1.0.1" />
     <PackageReference Include="MySql.Data" Version="9.4.0" />
     <PackageReference Include="System.Data.OleDb" Version="9.0.9" />
   </ItemGroup>
