working print receipt (receipt now can be saved as a pdf)

--- a/Restaurant-POS-system/Restaurant-POS-system.vbproj
+++ b/Restaurant-POS-system/Restaurant-POS-system.vbproj
@@ -16,7 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CrystalReports.ReportAppServer.Controllers" Version="13.0.4003" />
     <PackageReference Include="MySql.Data" Version="9.4.0" />
+    <PackageReference Include="PDFsharp" Version="6.2.2" />
     <PackageReference Include="System.Data.OleDb" Version="9.0.9" />
   </ItemGroup>
 
