--- a/Restaurant-POS-system/Restaurant-POS-system.vbproj
+++ b/Restaurant-POS-system/Restaurant-POS-system.vbproj
@@ -17,6 +17,9 @@
 
   <ItemGroup>
     <PackageReference Include="CrystalReports.ReportAppServer.Controllers" Version="13.0.4003" />
+    <PackageReference Include="Font.Awesome" Version="5.13.0" />
+    <PackageReference Include="FontAwesome" Version="4.7.0" />
+    <PackageReference Include="FontAwesome.Sharp" Version="6.6.0" />
     <PackageReference Include="MySql.Data" Version="9.4.0" />
     <PackageReference Include="PDFsharp" Version="6.2.2" />
     <PackageReference Include="System.Data.OleDb" Version="9.0.9" />
